Joined algorithms into one-file implementation and tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES
         tests/test.cpp)
 
-add_executable(algorithms ${SOURCE_FILES})
+
+set(SOURCE_FILES_ALL
+        tests/test_all.cpp)
+
+add_executable(algorithms_test ${SOURCE_FILES})
+add_executable(algorithms_test_all ${SOURCE_FILES_ALL})
